--- a/index.html
+++ b/index.html
@@ -345,13 +345,11 @@
                   alt="Banking App examples"
                   width="360"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-descr">
                 <h3 class="portfolio-item-title">Banking App</h3>
@@ -365,13 +363,11 @@
                   alt="Cashless Payment"
                   width="360"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-descr">
                 <h3 class="portfolio-item-title">Cashless Payment</h3>
@@ -385,13 +381,11 @@
                   alt="Meditation App"
                   width="360"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-descr">
                 <h3 class="portfolio-item-title">Meditation App</h3>
@@ -405,13 +399,11 @@
                   alt="Taxi Service"
                   width="360"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-descr">
                 <h3 class="portfolio-item-title">Taxi Service</h3>
@@ -425,13 +417,11 @@
                   alt="Screen Illustrations"
                   width="360"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-descr">
                 <h3 class="portfolio-item-title">Screen Illustrations</h3>
@@ -445,13 +435,11 @@
                   alt="Online Courses"
                   width="360"
                 />
-                <div class="overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-descr">
                 <h3 class="portfolio-item-title">Online Courses</h3>
